--- a/templates/academico/evaluaciones/list.html
+++ b/templates/academico/evaluaciones/list.html
@@ -1,2 +1,2 @@
-<!-- templates/academico/foros/list.html -->
-<h1>Vista de Foros</h1>
+<!-- templates/academico/evaluaciones/list.html -->
+<h1>Vista de Evaluaciones</h1>
