--- a/templates/academico/comunicaciones/list.html
+++ b/templates/academico/comunicaciones/list.html
@@ -1,2 +1,2 @@
-<!-- templates/academico/foros/list.html -->
-<h1>Vista de Foros</h1>
+<!-- templates/academico/comunicaciones/list.html -->
+<h1>Vista de Comunicaciones</h1>
